--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,10 @@
 {
   "image": "mcr.microsoft.com/devcontainers/universal:2",
-  "features": {
-    "ghcr.io/iterative/features/nvtop:1": {},
-    "ghcr.io/devcontainers/features/nvidia-cuda:1": {},
-    "ghcr.io/dhoeric/features/google-cloud-cli:1": {}
+  "mjm-deprecated": {
+    "features": {
+      "ghcr.io/iterative/features/nvtop:1": {},
+      "ghcr.io/devcontainers/features/nvidia-cuda:1": {},
+      "ghcr.io/dhoeric/features/google-cloud-cli:1": {}
+    }
   }
 }
